<resources>
    <string name="app_name">Supernova Móvil</string>
    <string name="action_settings">Settings</string>
    <string name="item_title">Palais Garnier</string>
    <string name="item_desc">The Palais Garnier which locates in Paris was built from 1861 for
        the Paris Opera.
    </string>
    <string name="detail_desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis
        nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
        pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
        deserunt mollit anim id est laborum.
    </string>
    <string name="detail_location">"8 Rue Scribe, 75009 Paris, France"</string>
    <string name="inicio">Inicio</string>
    <string name="configuracion">Configurar Aplicación</string>
    <string name="descargar_lecturas">Descargar</string>
    <string name="gestion_lecturas">GESTIÓN LECTURAS</string>
    <string name="capturar_datos">Capturar Datos</string>
    <string name="sincronizacion_datos">Sincronización</string>
    <string name="acerca">ACERCA DE </string>
    <string name="opciones">OPCIONES</string>
    <string name="action_search">Buscar</string>

    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_lecturas">LecturasActivity</string>
    <string name="title_activity_lectura">LecturaActivity</string>
    <string name="title_lecturas_pendientes">Lecturas Pendientes</string>

</resources>
