<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/opciones">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/ic_home_black_24dp"
                    android:tint="@color/button_grey"
                    android:title="@string/inicio" />
                <item
                    android:icon="@drawable/ic_build_black_24dp"
                    android:tint="@color/button_grey"
                    android:title="@string/configuracion" />

            </group>
        </menu>
    </item>
    <item android:title="@string/gestion_lecturas">
        <menu>
            <group android:checkableBehavior="single">

                <item
                    android:icon="@drawable/ic_cloud_download_black_24dp"
                    android:tint="@color/button_grey"
                    android:title="@string/descargar_lecturas" />

                <item
                    android:icon="@drawable/ic_border_color_black_24dp"
                    android:tint="@color/button_grey"
                    android:title="@string/capturar_datos" />
                <item
                    android:icon="@drawable/ic_cloud_upload_black_24dp"
                    android:tint="@color/button_grey"
                    android:title="@string/sincronizacion_datos" />
            </group>
        </menu>
    </item>
    <item android:title="@string/acerca">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:icon="@drawable/ic_perm_device_information_black_24dp"
                    android:tint="@color/button_grey"
                    android:title="@string/app_name" />
            </group>
        </menu>
    </item>
</menu>
